--- a/automation/pipelines/variables/PAAS_PROD_AUS_DR.yml
+++ b/automation/pipelines/variables/PAAS_PROD_AUS_DR.yml
@@ -1,3 +1,3 @@
 variables:
   deploymentAppServicePlan_skuName_web: 'I1'
-  deploymentAppServicePlan_skuCapacity_web: '1'
+  deploymentAppServicePlan_skuCapacity_web: ''
